--- a/package.json
+++ b/package.json
@@ -46,6 +46,8 @@
     "sinon": "^1.17.6"
   },
   "dependencies": {
+    "fetch-mock": "^5.9.4",
+    "mock-fetch": "^1.0.0",
     "react": "^15.3.0",
     "react-dom": "^15.3.0"
   }
